--- a/gui/super_admin/super_admin.ui
+++ b/gui/super_admin/super_admin.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1920</width>
-    <height>1080</height>
+    <height>1081</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>120</y>
+      <y>137</y>
       <width>92</width>
       <height>23</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>1520</x>
-      <y>120</y>
+      <y>137</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>1520</x>
-      <y>300</y>
+      <y>317</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>1400</x>
-      <y>160</y>
+      <y>177</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>1640</x>
-      <y>160</y>
+      <y>177</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>1600</x>
-      <y>0</y>
+      <x>1530</x>
+      <y>17</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -125,7 +125,7 @@
     <property name="geometry">
      <rect>
       <x>1640</x>
-      <y>240</y>
+      <y>257</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -138,7 +138,7 @@
     <property name="geometry">
      <rect>
       <x>1400</x>
-      <y>240</y>
+      <y>257</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -151,7 +151,7 @@
     <property name="geometry">
      <rect>
       <x>1520</x>
-      <y>210</y>
+      <y>227</y>
       <width>89</width>
       <height>51</height>
      </rect>
@@ -164,7 +164,7 @@
     <property name="geometry">
      <rect>
       <x>1400</x>
-      <y>60</y>
+      <y>77</y>
       <width>371</width>
       <height>31</height>
      </rect>
@@ -176,8 +176,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>480</y>
+      <x>560</x>
+      <y>540</y>
       <width>141</width>
       <height>61</height>
      </rect>
@@ -195,7 +195,7 @@
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>540</y>
+      <y>630</y>
       <width>67</width>
       <height>21</height>
      </rect>
@@ -208,7 +208,7 @@
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>540</y>
+      <y>630</y>
       <width>67</width>
       <height>21</height>
      </rect>
@@ -221,7 +221,7 @@
     <property name="geometry">
      <rect>
       <x>1010</x>
-      <y>540</y>
+      <y>630</y>
       <width>67</width>
       <height>21</height>
      </rect>
@@ -234,20 +234,23 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>590</y>
+      <y>680</y>
       <width>320</width>
-      <height>180</height>
+      <height>281</height>
      </rect>
     </property>
     <property name="text">
      <string>영상 준비 중...</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QCheckBox" name="rgb_cam_view">
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>540</y>
+      <y>630</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -260,7 +263,7 @@
     <property name="geometry">
      <rect>
       <x>620</x>
-      <y>540</y>
+      <y>630</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -273,7 +276,7 @@
     <property name="geometry">
      <rect>
       <x>1060</x>
-      <y>540</y>
+      <y>630</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -282,162 +285,30 @@
      <string>보기</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_16">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>790</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>좌표계 이동</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="gridLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>840</y>
-      <width>205</width>
-      <height>141</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_17">
-       <property name="text">
-        <string>X</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="3">
-      <widget class="QLabel" name="label_19">
-       <property name="text">
-        <string>값</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <widget class="QLabel" name="label_18">
-       <property name="text">
-        <string>값</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_8">
-       <property name="text">
-        <string>+</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QPushButton" name="pushButton_10">
-       <property name="text">
-        <string>-</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_20">
-       <property name="text">
-        <string>Y</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QPushButton" name="pushButton_9">
-       <property name="text">
-        <string>-</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="pushButton_11">
-       <property name="text">
-        <string>+</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_22">
-       <property name="text">
-        <string>Z</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="pushButton_13">
-       <property name="text">
-        <string>+</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="2">
-      <widget class="QPushButton" name="pushButton_12">
-       <property name="text">
-        <string>-</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="3">
-      <widget class="QLabel" name="label_21">
-       <property name="text">
-        <string>값</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QWidget" name="view_3d_dep" native="true">
     <property name="geometry">
      <rect>
       <x>450</x>
-      <y>590</y>
+      <y>680</y>
       <width>371</width>
-      <height>341</height>
+      <height>291</height>
      </rect>
     </property>
-    <widget class="QLabel" name="battery_voltage_3">
-     <property name="geometry">
-      <rect>
-       <x>130</x>
-       <y>110</y>
-       <width>431</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>15</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>긴급 상태  :</string>
-     </property>
-    </widget>
    </widget>
    <widget class="QWidget" name="view_3d_lidar" native="true">
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>590</y>
+      <y>680</y>
       <width>371</width>
-      <height>341</height>
+      <height>291</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>700</x>
+      <x>730</x>
       <y>0</y>
       <width>241</width>
       <height>81</height>
@@ -459,7 +330,7 @@
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>160</y>
+      <y>177</y>
       <width>112</width>
       <height>23</height>
      </rect>
@@ -478,7 +349,7 @@
     <property name="geometry">
      <rect>
       <x>1770</x>
-      <y>200</y>
+      <y>217</y>
       <width>112</width>
       <height>23</height>
      </rect>
@@ -491,7 +362,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>90</y>
+      <y>80</y>
       <width>361</width>
       <height>81</height>
      </rect>
@@ -527,7 +398,7 @@
    <widget class="QFrame" name="battery_frame">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>500</x>
       <y>70</y>
       <width>221</width>
       <height>201</height>
@@ -543,9 +414,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>60</y>
+       <y>70</y>
        <width>201</width>
-       <height>121</height>
+       <height>91</height>
       </rect>
      </property>
      <property name="font">
@@ -586,9 +457,9 @@
     <property name="geometry">
      <rect>
       <x>1330</x>
-      <y>60</y>
+      <y>77</y>
       <width>551</width>
-      <height>381</height>
+      <height>331</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -602,7 +473,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>200</y>
+      <y>250</y>
       <width>361</width>
       <height>81</height>
      </rect>
@@ -639,7 +510,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>310</y>
+      <y>420</y>
       <width>361</width>
       <height>81</height>
      </rect>
@@ -654,7 +525,7 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>30</y>
+       <y>25</y>
        <width>311</width>
        <height>31</height>
       </rect>
@@ -675,7 +546,7 @@
    <widget class="QFrame" name="cmd_vel_x_frame">
     <property name="geometry">
      <rect>
-      <x>710</x>
+      <x>740</x>
       <y>70</y>
       <width>221</width>
       <height>201</height>
@@ -709,7 +580,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>80</y>
+       <y>70</y>
        <width>211</width>
        <height>81</height>
       </rect>
@@ -730,7 +601,7 @@
    <widget class="QFrame" name="cmd_vel_z_frame">
     <property name="geometry">
      <rect>
-      <x>950</x>
+      <x>980</x>
       <y>70</y>
       <width>221</width>
       <height>201</height>
@@ -764,7 +635,7 @@
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>80</y>
+       <y>70</y>
        <width>211</width>
        <height>81</height>
       </rect>
@@ -782,46 +653,10 @@
      </property>
     </widget>
    </widget>
-   <widget class="QLabel" name="odom1">
+   <widget class="QFrame" name="odom_frame">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>470</y>
-      <width>361</width>
-      <height>131</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Odom</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="motor_state">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>450</y>
-      <width>441</width>
-      <height>191</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>모터 동작 상태  :</string>
-    </property>
-   </widget>
-   <widget class="QFrame" name="battery_frame_2">
-    <property name="geometry">
-     <rect>
-      <x>470</x>
+      <x>500</x>
       <y>290</y>
       <width>351</width>
       <height>211</height>
@@ -1044,6 +879,243 @@
      </property>
     </widget>
    </widget>
+   <widget class="QFrame" name="motor_frame">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>290</y>
+      <width>261</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="motor_r_A">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>70</y>
+       <width>91</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>motor</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="motor_state_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>91</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>모터 상태</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="motor_r">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>40</y>
+       <width>71</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Right</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="motor_l">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>110</y>
+       <width>61</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Left</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="motor_r_Nm">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>70</y>
+       <width>111</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>motor</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="motor_l_A">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>140</y>
+       <width>91</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>motor</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="motor_l_Nm">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>140</y>
+       <width>111</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>motor</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QFrame" name="camera_frame">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>610</y>
+      <width>371</width>
+      <height>401</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QFrame" name="camera_frame_2">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>610</y>
+      <width>371</width>
+      <height>401</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QFrame" name="camera_frame_3">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>610</y>
+      <width>371</width>
+      <height>401</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+   </widget>
+   <widget class="QWidget" name="map_widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1460</x>
+      <y>620</y>
+      <width>271</width>
+      <height>281</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="show_heatmap_btn">
+    <property name="geometry">
+     <rect>
+      <x>1520</x>
+      <y>940</y>
+      <width>151</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Show heat map</string>
+    </property>
+   </widget>
+   <zorder>camera_frame_3</zorder>
+   <zorder>camera_frame_2</zorder>
+   <zorder>camera_frame</zorder>
    <zorder>cmd_vel_x_frame</zorder>
    <zorder>battery_frame</zorder>
    <zorder>frame_3</zorder>
@@ -1068,8 +1140,6 @@
    <zorder>rgb_cam_view</zorder>
    <zorder>dep_cam_view</zorder>
    <zorder>lidar_view</zorder>
-   <zorder>label_16</zorder>
-   <zorder>gridLayoutWidget</zorder>
    <zorder>view_3d_dep</zorder>
    <zorder>view_3d_lidar</zorder>
    <zorder>label_3</zorder>
@@ -1077,9 +1147,10 @@
    <zorder>joystick_control_button</zorder>
    <zorder>ssid_frame</zorder>
    <zorder>cmd_vel_z_frame</zorder>
-   <zorder>odom1</zorder>
-   <zorder>motor_state</zorder>
-   <zorder>battery_frame_2</zorder>
+   <zorder>odom_frame</zorder>
+   <zorder>motor_frame</zorder>
+   <zorder>map_widget</zorder>
+   <zorder>show_heatmap_btn</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
